Added admin table

--- a/Serenity_Sanctury_v1/Serenity_Sanctury_v1.csproj
+++ b/Serenity_Sanctury_v1/Serenity_Sanctury_v1.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Views\Admin\htmlpage.html" />
+  </ItemGroup>
+
 </Project>
