--- a/Serenity_Sanctury_v1/Serenity_Sanctury_v1.csproj
+++ b/Serenity_Sanctury_v1/Serenity_Sanctury_v1.csproj
@@ -10,4 +10,8 @@
     <None Remove="Views\Admin\htmlpage.html" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+  </ItemGroup>
+
 </Project>
